Версия BETA 1.1 (Не закончена)

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.draimgoose</groupId>
     <artifactId>draimrad</artifactId>
-    <version>1.0</version>
+    <version>BETA 1.1</version>
     <packaging>jar</packaging>
 
     <name>DraimRad</name>
